@@ -15,26 +15,34 @@
  */
 package com.redhat.parodos.project.service;
 
-import java.util.Date;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
-import com.redhat.parodos.common.AbstractEntity;
+import com.redhat.parodos.common.entity.AbstractEntity;
 import com.redhat.parodos.common.exceptions.IDType;
+import com.redhat.parodos.common.exceptions.OperationDeniedException;
 import com.redhat.parodos.common.exceptions.ResourceAlreadyExistsException;
 import com.redhat.parodos.common.exceptions.ResourceNotFoundException;
 import com.redhat.parodos.common.exceptions.ResourceType;
-import com.redhat.parodos.project.dto.ProjectRequestDTO;
-import com.redhat.parodos.project.dto.ProjectResponseDTO;
-import com.redhat.parodos.project.dto.ProjectUserRoleResponseDTO;
-import com.redhat.parodos.project.dto.UserRoleRequestDTO;
-import com.redhat.parodos.project.dto.UserRoleResponseDTO;
+import com.redhat.parodos.project.dto.request.AccessRequestDTO;
+import com.redhat.parodos.project.dto.request.ProjectRequestDTO;
+import com.redhat.parodos.project.dto.request.UserRoleRequestDTO;
+import com.redhat.parodos.project.dto.response.AccessResponseDTO;
+import com.redhat.parodos.project.dto.response.ProjectResponseDTO;
+import com.redhat.parodos.project.dto.response.ProjectUserRoleResponseDTO;
+import com.redhat.parodos.project.dto.response.UserRoleResponseDTO;
 import com.redhat.parodos.project.entity.Project;
+import com.redhat.parodos.project.entity.ProjectAccessRequest;
 import com.redhat.parodos.project.entity.ProjectUserRole;
 import com.redhat.parodos.project.entity.Role;
+import com.redhat.parodos.project.enums.ProjectAccessStatus;
+import com.redhat.parodos.project.repository.ProjectAccessRequestRepository;
 import com.redhat.parodos.project.repository.ProjectRepository;
 import com.redhat.parodos.project.repository.ProjectUserRoleRepository;
 import com.redhat.parodos.project.repository.RoleRepository;
@@ -46,6 +54,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import static java.util.Objects.isNull;
 import static java.util.stream.Collectors.groupingBy;
 
 /**
@@ -63,21 +72,26 @@ public class ProjectServiceImpl implements ProjectService {
 
 	private final ProjectUserRoleRepository projectUserRoleRepository;
 
+	private final ProjectAccessRequestRepository projectAccessRequestRepository;
+
 	private final UserService userService;
 
 	private final ModelMapper modelMapper;
 
 	public ProjectServiceImpl(ProjectRepository projectRepository, RoleRepository roleRepository,
-			ProjectUserRoleRepository projectUserRoleRepository, UserService userService, ModelMapper modelMapper) {
+			ProjectUserRoleRepository projectUserRoleRepository,
+			ProjectAccessRequestRepository projectAccessRequestRepository, UserService userService,
+			ModelMapper modelMapper) {
 		this.projectRepository = projectRepository;
 		this.roleRepository = roleRepository;
 		this.projectUserRoleRepository = projectUserRoleRepository;
+		this.projectAccessRequestRepository = projectAccessRequestRepository;
 		this.userService = userService;
 		this.modelMapper = modelMapper;
 	}
 
 	@Override
-	public ProjectResponseDTO save(ProjectRequestDTO projectRequestDTO) {
+	public ProjectResponseDTO createProject(ProjectRequestDTO projectRequestDTO) {
 		if (projectRepository.findByNameIgnoreCase(projectRequestDTO.getName()).isPresent()) {
 			throw new ResourceAlreadyExistsException(ResourceType.PROJECT, IDType.NAME, projectRequestDTO.getName());
 		}
@@ -89,45 +103,55 @@ public class ProjectServiceImpl implements ProjectService {
 		User user = userService.getUserEntityByUsername(SecurityUtils.getUsername());
 		// create project entity
 		Project project = projectRepository.save(Project.builder().name(projectRequestDTO.getName())
-				.description(projectRequestDTO.getDescription()).createDate(new Date()).modifyDate(new Date()).build());
+				.description(projectRequestDTO.getDescription()).build());
 		// map project, user and role
 		ProjectUserRole projectUserRole = projectUserRoleRepository.save(ProjectUserRole.builder().id(ProjectUserRole.Id
 				.builder().projectId(project.getId()).userId(user.getId()).roleId(role.getId()).build())
 				.project(project).user(user).role(role).build());
-		return modelMapper.map(projectUserRole, ProjectResponseDTO.class);
+
+		return buildProjectReponseDTO(user, projectUserRole);
 	}
 
 	@Override
 	public ProjectResponseDTO getProjectById(UUID id) {
-		return modelMapper.map(
-				projectRepository.findById(id)
-						.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, IDType.ID, id)),
-				ProjectResponseDTO.class);
+		User user = userService.getUserEntityByUsername(SecurityUtils.getUsername());
+		ProjectUserRole projectUserRole = projectUserRoleRepository.findByProjectId(id)
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, id));
+		return buildProjectReponseDTO(user, projectUserRole);
 	}
 
 	@Override
 	public List<ProjectResponseDTO> getProjects() {
 		User user = userService.getUserEntityByUsername(SecurityUtils.getUsername());
-		return projectUserRoleRepository.findByUserId(user.getId()).stream()
-				.map(projectUserRole -> modelMapper.map(projectUserRole, ProjectResponseDTO.class)).toList();
+		Map<UUID, ProjectUserRole> hm = new HashMap<>();
+		projectUserRoleRepository.findByUserId(user.getId())
+				.forEach(projectUserRole -> hm.put(projectUserRole.getProject().getId(), projectUserRole));
+		return projectRepository.findAll().stream().map(project -> {
+			if (hm.containsKey(project.getId())) {
+				return buildProjectReponseDTO(user, hm.get(project.getId()));
+			}
+			return buildProjectReponseDTO(project);
+		}).collect(Collectors.toList());
 	}
 
 	@Override
 	public List<ProjectResponseDTO> getProjectByIdAndUserId(UUID projectId, UUID userId) {
+		User user = userService.getUserEntityByUsername(SecurityUtils.getUsername());
 		return projectUserRoleRepository.findByProjectIdAndUserId(projectId, userId).stream()
-				.map(projectUserRole -> modelMapper.map(projectUserRole, ProjectResponseDTO.class)).toList();
+				.map(projectUserRole -> buildProjectReponseDTO(user, projectUserRole)).toList();
 	}
 
 	@Override
 	public List<ProjectResponseDTO> getProjectsByUserId(UUID userId) {
+		User user = userService.getUserEntityByUsername(SecurityUtils.getUsername());
 		return projectUserRoleRepository.findByUserId(userId).stream()
-				.map(projectUserRole -> modelMapper.map(projectUserRole, ProjectResponseDTO.class)).toList();
+				.map(projectUserRole -> buildProjectReponseDTO(user, projectUserRole)).toList();
 	}
 
 	@Transactional
 	public ProjectUserRoleResponseDTO updateUserRolesToProject(UUID id, List<UserRoleRequestDTO> userRoleRequestDTOs) {
 		Project project = projectRepository.findById(id)
-				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, IDType.ID, id));
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, id));
 
 		Set<ProjectUserRole> projectUserRoles = userRoleRequestDTOs.stream()
 				.map(userRoleRequestDTO -> userRoleRequestDTO.getRoles().stream()
@@ -153,13 +177,47 @@ public class ProjectServiceImpl implements ProjectService {
 	@Override
 	public ProjectUserRoleResponseDTO removeUsersFromProject(UUID id, List<String> usernames) {
 		Project project = projectRepository.findById(id)
-				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, IDType.ID, id));
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, id));
 
 		projectUserRoleRepository.deleteAllByIdProjectIdAndIdUserIdIn(project.getId(),
 				userService.findAllUserEntitiesByUsernameIn(usernames).stream().map(AbstractEntity::getId).toList());
 		project.getProjectUserRoles()
 				.removeIf(projectUserRole -> usernames.contains(projectUserRole.getUser().getUsername()));
 		return getProjectUserRoleResponseDTOFromProject(project);
+	}
+
+	@Override
+	public AccessResponseDTO createAccessRequestToProject(UUID id, AccessRequestDTO accessRequestDTO) {
+		Project project = projectRepository.findById(id)
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.PROJECT, id));
+		if (isNull(accessRequestDTO.getUsername()) || accessRequestDTO.getUsername().isEmpty()) {
+			accessRequestDTO.setUsername(SecurityUtils.getUsername());
+		}
+		User user = userService.getUserEntityByUsername(accessRequestDTO.getUsername());
+		if (isNull(accessRequestDTO.getRole())) {
+			accessRequestDTO.setRole(com.redhat.parodos.project.enums.Role.DEVELOPER);
+		}
+		Role role = roleRepository.findByNameIgnoreCase(accessRequestDTO.getRole().name()).orElseThrow(
+				() -> new ResourceNotFoundException(ResourceType.ROLE, IDType.NAME, accessRequestDTO.getRole().name()));
+		Optional<ProjectUserRole> projectUserRoleOptional = projectUserRoleRepository
+				.findByProjectIdAndUserIdAndRoleId(project.getId(), user.getId(), role.getId());
+		if (projectUserRoleOptional.isPresent()) {
+			throw new OperationDeniedException(String.format("User %s already assigned into project %s with role %s",
+					user.getUsername(), project.getName(), projectUserRoleOptional.get().getRole().getName()));
+		}
+		ProjectAccessRequest projectAccessRequest = projectAccessRequestRepository.save(ProjectAccessRequest.builder()
+				.project(project).user(user).role(role).status(ProjectAccessStatus.PENDING).build());
+		User projectOwner = userService.getUserEntityById(project.getCreatedBy());
+		List<User> projectAdmins = getProjectUsersByRoleName(project.getId(),
+				com.redhat.parodos.project.enums.Role.ADMIN);
+		return AccessResponseDTO.builder().accessRequestId(projectAccessRequest.getId())
+				.project(AccessResponseDTO.ProjectDTO.builder().id(project.getId()).name(project.getName())
+						.createdBy(String.format("%s, %s", projectOwner.getFirstName(), projectOwner.getLastName()))
+						.createdDate(project.getCreatedDate()).build())
+				.approvalSentTo((isNull(projectAdmins) || projectAdmins.isEmpty())
+						? Collections.singletonList(projectOwner.getUsername())
+						: projectAdmins.stream().map(User::getUsername).collect(Collectors.toList()))
+				.escalationSentTo(projectOwner.getUsername()).build();
 	}
 
 	private ProjectUserRoleResponseDTO getProjectUserRoleResponseDTOFromProject(Project project) {
@@ -176,6 +234,37 @@ public class ProjectServiceImpl implements ProjectService {
 								.build())
 						.toList())
 				.build();
+	}
+
+	private ProjectResponseDTO buildProjectReponseDTO(User user, ProjectUserRole projectUserRole) {
+		return ProjectResponseDTO.builder().id(projectUserRole.getProject().getId())
+				.name(projectUserRole.getProject().getName()).description(projectUserRole.getProject().getDescription())
+				.createdDate(projectUserRole.getProject().getCreatedDate())
+				.createdBy(projectUserRole.getUser().getUsername())
+				.modifiedDate(projectUserRole.getProject().getModifiedDate())
+				.modifiedBy(projectUserRole.getProject().getModifiedBy() != null
+						? userService.getUserEntityById(projectUserRole.getProject().getModifiedBy()).getUsername()
+						: null)
+				.accessRole(projectUserRole.getUser().getId().equals(user.getId()) ? projectUserRole.getRole().getName()
+						: null)
+				.build();
+	}
+
+	private ProjectResponseDTO buildProjectReponseDTO(Project project) {
+		User createdByUser = userService.getUserEntityById(project.getCreatedBy());
+		User modifiedByUser = userService.getUserEntityById(project.getModifiedBy());
+		return ProjectResponseDTO.builder().id(project.getId()).name(project.getName())
+				.description(project.getDescription()).createdDate(project.getCreatedDate())
+				.createdBy(createdByUser.getUsername()).modifiedDate(project.getModifiedDate())
+				.modifiedBy(modifiedByUser.getUsername()).build();
+	}
+
+	private List<User> getProjectUsersByRoleName(UUID projectId, com.redhat.parodos.project.enums.Role roleName) {
+		Role role = roleRepository.findByNameIgnoreCase(roleName.name())
+				.orElseThrow(() -> new ResourceNotFoundException(ResourceType.ROLE, IDType.NAME, roleName.name()));
+		List<ProjectUserRole> projectUserRoleList = projectUserRoleRepository.findByProjectIdAndRoleId(projectId,
+				role.getId());
+		return projectUserRoleList.stream().map(ProjectUserRole::getUser).collect(Collectors.toList());
 	}
 
 }
